--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.9.9e</title>
+    <title>Qombo: Data Navigator - v1.9.9f</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.9.9e</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.9.9f</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
