--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.9.9g</title>
+    <title>Qombo: Data Navigator - v1.10.0</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.9.9g</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.10.0</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
@@ -232,16 +232,21 @@
                 <tr><th>rewardShares 6 -> 3</th><td>1657382400000</td><td id="date-reward-shares1"></td><td id="until-reward-shares1"></td></tr>
                 <tr><th>selfSponsorshipAlgoV1SnapshotTimestamp</th><td>1670230000000</td><td id="date-snapshot1"></td><td id="until-snapshot1"></td></tr>
                 <tr><th>selfSponsorshipAlgoV1Height = 1092400</th><td id="timestamp-algo1"></td><td id="date-algo1"></td><td id="until-algo1"></td></tr>
+                <tr><th>cancelSellNameValidationTimestamp</th><td>1676986362069</td><td id="date-cancel"></td><td id="until-cancel"></td></tr>
                 <tr><th>unitFee 0.001 -> 0.01</th><td>1692118800000</td><td id="date-unit-fee"></td><td id="until-unit-fee"></td></tr>
                 <tr><th>rewardShares 3 -> 2</th><td>1698508800000</td><td id="date-reward-shares2"></td><td id="until-reward-shares2"></td></tr>
                 <tr><th>blockRewardBatchStartHeight = 1508000</th><td id="timestamp-batch"></td><td id="date-batch"></td><td id="until-batch"></td></tr>
-                <tr><th>disableTransferPrivsTimestamp</th><td>1706745000000</td><td id="date-disable"></td><td id="until-disable"></td></tr>
+                <tr><th>disableTransferPrivsTimestamp</th><td>1706745000000</td><td id="date-disable1"></td><td id="until-disable1"></td></tr>
                 <tr><th>penaltyFixHeight = 1589200</th><td id="timestamp-fix"></td><td id="date-fix"></td><td id="until-fix"></td></tr>
                 <tr><th>selfSponsorshipAlgoV2SnapshotTimestamp</th><td>1708360200000</td><td id="date-snapshot2"></td><td id="until-snapshot2"></td></tr>
                 <tr><th>selfSponsorshipAlgoV2Height = 1611200</th><td id="timestamp-algo2"></td><td id="date-algo2"></td><td id="until-algo2"></td></tr>
                 <tr><th>selfSponsorshipAlgoV3SnapshotTimestamp</th><td>1708432200000</td><td id="date-snapshot3"></td><td id="until-snapshot3"></td></tr>
                 <tr><th>selfSponsorshipAlgoV3Height = 1612200</th><td id="timestamp-algo3"></td><td id="date-algo3"></td><td id="until-algo3"></td></tr>
-                <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable"></td><td id="until-enable"></td></tr>
+                <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable1"></td><td id="until-enable1"></td></tr>
+                <tr><th>disableRewardshareHeight = 1899100</th><td id="timestamp-disable2"></td><td id="date-disable2"></td><td id="until-disable2"></td></tr>
+                <tr><th>onlyMintWithNameHeight = 1900300</th><td id="timestamp-name"></td><td id="date-name"></td><td id="until-name"></td></tr>
+                <tr><th>groupMemberCheckHeight = 1902700</th><td id="timestamp-group"></td><td id="date-group"></td><td id="until-group"></td></tr>
+                <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
             </table>
         </section>
     </main>
