--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.10.0</title>
+    <title>Qombo: Data Navigator - v1.10.1</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.10.0</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.10.1</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
@@ -247,6 +247,22 @@
                 <tr><th>onlyMintWithNameHeight = 1900300</th><td id="timestamp-name"></td><td id="date-name"></td><td id="until-name"></td></tr>
                 <tr><th>groupMemberCheckHeight = 1902700</th><td id="timestamp-group"></td><td id="date-group"></td><td id="until-group"></td></tr>
                 <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
+            </table>
+            <h3>Block Rewards</h3>
+            <table>
+                <tr><th>5.00 QORT/block = 1</th><td id="timestamp-reduction1"></td><td id="date-reduction1"></td><td id="until-reduction1"></td></tr>
+                <tr><th>4.75 QORT/block = 259201</th><td id="timestamp-reduction2"></td><td id="date-reduction2"></td><td id="until-reduction2"></td></tr>
+                <tr><th>4.50 QORT/block = 518401</th><td id="timestamp-reduction3"></td><td id="date-reduction3"></td><td id="until-reduction3"></td></tr>
+                <tr><th>4.25 QORT/block = 777601</th><td id="timestamp-reduction4"></td><td id="date-reduction4"></td><td id="until-reduction4"></td></tr>
+                <tr><th>4.00 QORT/block = 1036801</th><td id="timestamp-reduction5"></td><td id="date-reduction5"></td><td id="until-reduction5"></td></tr>
+                <tr><th>3.75 QORT/block = 1296001</th><td id="timestamp-reduction6"></td><td id="date-reduction6"></td><td id="until-reduction6"></td></tr>
+                <tr><th>3.50 QORT/block = 1555201</th><td id="timestamp-reduction7"></td><td id="date-reduction7"></td><td id="until-reduction7"></td></tr>
+                <tr><th>3.25 QORT/block = 1814401</th><td id="timestamp-reduction8"></td><td id="date-reduction8"></td><td id="until-reduction8"></td></tr>
+                <tr><th>3.00 QORT/block = 2073601</th><td id="timestamp-reduction9"></td><td id="date-reduction9"></td><td id="until-reduction9"></td></tr>
+                <tr><th>2.75 QORT/block = 2332801</th><td id="timestamp-reduction10"></td><td id="date-reduction10"></td><td id="until-reduction10"></td></tr>
+                <tr><th>2.50 QORT/block = 2592001</th><td id="timestamp-reduction11"></td><td id="date-reduction11"></td><td id="until-reduction11"></td></tr>
+                <tr><th>2.25 QORT/block = 2851201</th><td id="timestamp-reduction12"></td><td id="date-reduction12"></td><td id="until-reduction12"></td></tr>
+                <tr><th>2.00 QORT/block = 3110401</th><td id="timestamp-reduction13"></td><td id="date-reduction13"></td><td id="until-reduction13"></td></tr>
             </table>
         </section>
     </main>
