--- a/extra.html
+++ b/extra.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.7.0</title>
+    <title>Qombo: Data Navigator - v1.7.1</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.7.0</h1>
+        <h1>Qombo: Data Navigator - v1.7.1</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -20,15 +20,16 @@
         <section id="extra-info">
             <h3>Extra Page - For Development Purposes</h3>
             <div id="extra-div"></div>
-            <table><tr><th>Current Block</th><td id="block-height"></td><th>Current Timestamp</th><td id="current-timestamp"></td></tr>
+            <table>
+                <tr><th>Current Block</th><td id="block-height"></td><th>Current Timestamp</th><td id="current-timestamp"></td></tr>
                 <tr><th>Blocks/Day</th><td id="blocks-past-day"></td><th>Seconds/Block</th><td id="block-time"></td></tr>
+                <tr><th id="height-reward">Next Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
             </table>
         </section>
         
         <section id="trigger-info">
             <h3>Feature Triggers</h3>
             <table>
-                <tr><th id="height-reward">Next Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
                 <tr><th>genesisBlockTimestamp</th><td>1593450000000</td><td id="date-genesis"></td><td id="until-genesis"></td></tr>
                 <tr><th>nameFee 0.001 -> 5</th><td>1645372800000</td><td id="date-name-fee1"></td><td id="until-name-fee1"></td></tr>
                 <tr><th>nameFee 5 -> 1.25</th><td>1651420800000</td><td id="date-name-fee2"></td><td id="until-name-fee2"></td></tr>
@@ -50,6 +51,25 @@
                 <tr><th>onlyMintWithNameHeight = 1900300</th><td id="timestamp-name"></td><td id="date-name"></td><td id="until-name"></td></tr>
                 <tr><th>groupMemberCheckHeight = 1902700</th><td id="timestamp-group"></td><td id="date-group"></td><td id="until-group"></td></tr>
                 <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
+            </table>
+        </section>
+        
+        <section id="reward-info">
+            <h3>Block Rewards</h3>
+            <table>
+                <tr><th>5.00 QORT/block = 1</th><td id="timestamp-reduction1"></td><td id="date-reduction1"></td><td id="until-reduction1"></td></tr>
+                <tr><th>4.75 QORT/block = 259201</th><td id="timestamp-reduction2"></td><td id="date-reduction2"></td><td id="until-reduction2"></td></tr>
+                <tr><th>4.50 QORT/block = 518401</th><td id="timestamp-reduction3"></td><td id="date-reduction3"></td><td id="until-reduction3"></td></tr>
+                <tr><th>4.25 QORT/block = 777601</th><td id="timestamp-reduction4"></td><td id="date-reduction4"></td><td id="until-reduction4"></td></tr>
+                <tr><th>4.00 QORT/block = 1036801</th><td id="timestamp-reduction5"></td><td id="date-reduction5"></td><td id="until-reduction5"></td></tr>
+                <tr><th>3.75 QORT/block = 1296001</th><td id="timestamp-reduction6"></td><td id="date-reduction6"></td><td id="until-reduction6"></td></tr>
+                <tr><th>3.50 QORT/block = 1555201</th><td id="timestamp-reduction7"></td><td id="date-reduction7"></td><td id="until-reduction7"></td></tr>
+                <tr><th>3.25 QORT/block = 1814401</th><td id="timestamp-reduction8"></td><td id="date-reduction8"></td><td id="until-reduction8"></td></tr>
+                <tr><th>3.00 QORT/block = 2073601</th><td id="timestamp-reduction9"></td><td id="date-reduction9"></td><td id="until-reduction9"></td></tr>
+                <tr><th>2.75 QORT/block = 2332801</th><td id="timestamp-reduction10"></td><td id="date-reduction10"></td><td id="until-reduction10"></td></tr>
+                <tr><th>2.50 QORT/block = 2592001</th><td id="timestamp-reduction11"></td><td id="date-reduction11"></td><td id="until-reduction11"></td></tr>
+                <tr><th>2.25 QORT/block = 2851201</th><td id="timestamp-reduction12"></td><td id="date-reduction12"></td><td id="until-reduction12"></td></tr>
+                <tr><th>2.00 QORT/block = 3110401</th><td id="timestamp-reduction13"></td><td id="date-reduction13"></td><td id="until-reduction13"></td></tr>
             </table>
         </section>
     </main>
