--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.2</title>
+    <title>Qombo: Data Navigator - v1.11.3</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.11.2</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.11.3</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
@@ -244,9 +244,11 @@
                 <tr><th>selfSponsorshipAlgoV3Height = 1612200</th><td id="timestamp-algo3"></td><td id="date-algo3"></td><td id="until-algo3"></td></tr>
                 <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable1"></td><td id="until-enable1"></td></tr>
                 <tr><th>disableRewardshareHeight = 1899100</th><td id="timestamp-disable2"></td><td id="date-disable2"></td><td id="until-disable2"></td></tr>
-                <tr><th>onlyMintWithNameHeight = 1900300</th><td id="timestamp-name"></td><td id="date-name"></td><td id="until-name"></td></tr>
+                <tr><th>onlyMintWithNameHeight = 1900300</th><td id="timestamp-name1"></td><td id="date-name1"></td><td id="until-name1"></td></tr>
                 <tr><th>groupMemberCheckHeight = 1902700</th><td id="timestamp-group"></td><td id="date-group"></td><td id="until-group"></td></tr>
                 <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
+                <tr><th>decreaseOnlineAccountsDifficultyTimestamp</th><td>1731958200000</td><td id="date-decrease"></td><td id="until-decrease"></td></tr>
+                <tr><th>removeOnlyMintWithNameHeight = 1935500</th><td id="timestamp-name2"></td><td id="date-name2"></td><td id="until-name2"></td></tr>
             </table>
             <h3>Block Rewards</h3>
             <table>
