--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.4</title>
+    <title>Qombo: Data Navigator - v1.11.5</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.11.4</h1>
+        <h1>Qombo: Data Navigator - v1.11.5</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -31,7 +31,7 @@
             <h3>Unconfirmed Transactions</h3>
             <table id="transaction-table">
                 <tr><th>Total Unconfirmed</th></tr>
-                <tr><th>Loading...</th></tr>
+                <tr><th>Loading</th></tr>
             </table>
         </section>
 
