--- a/trades.html
+++ b/trades.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.4</title>
+    <title>Qombo: Data Navigator - v1.11.5</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.11.4</h1>
+        <h1>Qombo: Data Navigator - v1.11.5</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -35,7 +35,7 @@
 
         <section id="trade-info">
             <h2>Available Trades</h2>
-            <p>Total Available Trades: <span id="total-trades">Loading... (not working yet)</span></p>
+            <p>Total Available Trades: <span id="total-trades">Loading (not working yet)</span></p>
             <div id="trade-data">
             </div>
         </section>
