--- a/txs.html
+++ b/txs.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.4</title>
+    <title>Qombo: Data Navigator - v1.11.5</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.11.4</h1>
+        <h1>Qombo: Data Navigator - v1.11.5</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -20,21 +20,89 @@
         <section id="blockchain-info">
             <h2>Current Blockchain Information</h2>
             <table id="info-table">
-                <tr><th>Current Block Height</th><td id="block-height"></td></tr>
-                <tr><th>Current QDN Size</th><td id="qdn-size"></td></tr>
+                <tr>
+                    <th>Current Block Height<button id="refresh-block-height">Refresh</button></th>
+                    <td id="block-height"></td>
+                </tr>
+                <tr>
+                    <th>Current QDN Size<button id="refresh-qdn-size">Refresh</button></th>
+                    <td id="qdn-size"></td>
+                </tr>
             </table>
         </section>
 
         <section id="transaction-info">
-            <h2>Unconfirmed Transactions</h2>
+            <h2>Unconfirmed Transactions<button id="refresh-unconfirmed">Refresh</button></h2>
             <table id="transaction-table">
-                <tr><th>Total Unconfirmed</th></tr>
-                <tr><th>Loading...</th></tr>
+                <!-- Content will be loaded upon clicking the refresh button -->
             </table>
         </section>
 
-        <section id="recent-txs">
-            <h2>Recent Transactions</h2>
+        <section id="transaction-search">
+            <h2>Transaction Search<button type="button" id="refresh-recent-txs">Recent</button></h2>
+            <form id="search-form">
+                <label for="startBlock">Start Block:</label>
+                <input type="number" id="startBlock" name="startBlock" min="0"><br>
+                <label for="blockLimit">Block Limit:</label>
+                <input type="number" id="blockLimit" name="blockLimit" min="0"><br>
+                <label for="txGroupId">Transaction Group ID:</label>
+                <input type="number" id="txGroupId" name="txGroupId" min="0"><br>
+                <label for="txType">Transaction Type:</label>
+                <select id="txType" name="txType" multiple size="10">
+                    <option value="GENESIS">GENESIS</option>
+                    <option value="PAYMENT">PAYMENT</option>
+                    <option value="REGISTER_NAME">REGISTER_NAME</option>
+                    <option value="UPDATE_NAME">UPDATE_NAME</option>
+                    <option value="SELL_NAME">SELL_NAME</option>
+                    <option value="CANCEL_SELL_NAME">CANCEL_SELL_NAME</option>
+                    <option value="BUY_NAME">BUY_NAME</option>
+                    <option value="CREATE_POLL">CREATE_POLL</option>
+                    <option value="VOTE_ON_POLL">VOTE_ON_POLL</option>
+                    <option value="ARBITRARY">ARBITRARY</option>
+                    <option value="ISSUE_ASSET">ISSUE_ASSET</option>
+                    <option value="TRANSFER_ASSET">TRANSFER_ASSET</option>
+                    <option value="CREATE_ASSET_ORDER">CREATE_ASSET_ORDER</option>
+                    <option value="CANCEL_ASSET_ORDER">CANCEL_ASSET_ORDER</option>
+                    <option value="MULTI_PAYMENT">MULTI_PAYMENT</option>
+                    <option value="DEPLOY_AT">DEPLOY_AT</option>
+                    <option value="MESSAGE">MESSAGE</option>
+                    <option value="CHAT">CHAT</option>
+                    <option value="PUBLICIZE">PUBLICIZE</option>
+                    <option value="AIRDROP">AIRDROP</option>
+                    <option value="AT">AT</option>
+                    <option value="CREATE_GROUP">CREATE_GROUP</option>
+                    <option value="UPDATE_GROUP">UPDATE_GROUP</option>
+                    <option value="ADD_GROUP_ADMIN">ADD_GROUP_ADMIN</option>
+                    <option value="REMOVE_GROUP_ADMIN">REMOVE_GROUP_ADMIN</option>
+                    <option value="GROUP_BAN">GROUP_BAN</option>
+                    <option value="CANCEL_GROUP_BAN">CANCEL_GROUP_BAN</option>
+                    <option value="GROUP_KICK">GROUP_KICK</option>
+                    <option value="GROUP_INVITE">GROUP_INVITE</option>
+                    <option value="CANCEL_GROUP_INVITE">CANCEL_GROUP_INVITE</option>
+                    <option value="JOIN_GROUP">JOIN_GROUP</option>
+                    <option value="LEAVE_GROUP">LEAVE_GROUP</option>
+                    <option value="GROUP_APPROVAL">GROUP_APPROVAL</option>
+                    <option value="SET_GROUP">SET_GROUP</option>
+                    <option value="UPDATE_ASSET">UPDATE_ASSET</option>
+                    <option value="ACCOUNT_FLAGS">ACCOUNT_FLAGS</option>
+                    <option value="ENABLE_FORGING">ENABLE_FORGING</option>
+                    <option value="REWARD_SHARE">REWARD_SHARE</option>
+                    <option value="ACCOUNT_LEVEL">ACCOUNT_LEVEL</option>
+                    <option value="TRANSFER_PRIVS">TRANSFER_PRIVS</option>
+                    <option value="PRESENCE">PRESENCE</option>
+                </select><br>
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address"><br>
+                <label for="limit">Limit (Default 20):</label>
+                <input type="number" id="limit" name="limit" min="0" placeholder="20"><br>
+                <label for="offset">Offset:</label>
+                <input type="number" id="offset" name="offset" min="0"><br>
+                <label for="reverse">Reverse:</label>
+                <input type="checkbox" id="reverse" name="reverse" checked><br>
+                <label for="confirmed">Confirmed:</label>
+                <input type="checkbox" id="confirmed" name="confirmed" checked><br>
+                <button type="submit" id="search-button">Search</button>
+            </form>
             <table id="txs-table">
                 <thead>
                     <tr>
@@ -48,9 +116,17 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Search results will be displayed here -->
                 </tbody>
             </table>
-            <button id="load-more">See 100 More Blocks</button>
+            <!-- Place this within the Transaction Search section, below the txs-table -->
+            <!-- Pagination disabled
+            <div id="pagination-controls">
+                <button id="prev-page">Previous</button>
+                <span id="pagination-info">Page 1 of 1</span>
+                <button id="next-page">Next</button>
+            </div>
+            -->
         </section>
     </main>
 
