--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.9</title>
+    <title>Qombo: Data Navigator - v1.11.10</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.11.9</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.11.10</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
@@ -314,6 +314,7 @@
                 <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
                 <tr><th>decreaseOnlineAccountsDifficultyTimestamp</th><td>1731958200000</td><td id="date-decrease"></td><td id="until-decrease"></td></tr>
                 <tr><th>removeOnlyMintWithNameHeight = 1935500</th><td id="timestamp-name2"></td><td id="date-name2"></td><td id="until-name2"></td></tr>
+                <tr><th>fixBatchRewardHeight = 1945900</th><td id="timestamp-batchfix"></td><td id="date-batchfix"></td><td id="until-batchfix"></td></tr>
             </table>
             <h3>Block Rewards</h3>
             <table>
