--- a/extra.html
+++ b/extra.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.11.9</title>
+    <title>Qombo: Data Navigator - v1.11.10</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.11.9</h1>
+        <h1>Qombo: Data Navigator - v1.11.10</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -53,6 +53,7 @@
                 <tr><th>enableRewardshareHeight = 1905100</th><td id="timestamp-enable2"></td><td id="date-enable2"></td><td id="until-enable2"></td></tr>
                 <tr><th>decreaseOnlineAccountsDifficultyTimestamp</th><td>1731958200000</td><td id="date-decrease"></td><td id="until-decrease"></td></tr>
                 <tr><th>removeOnlyMintWithNameHeight = 1935500</th><td id="timestamp-name2"></td><td id="date-name2"></td><td id="until-name2"></td></tr>
+                <tr><th>fixBatchRewardHeight = 1945900</th><td id="timestamp-batchfix"></td><td id="date-batchfix"></td><td id="until-batchfix"></td></tr>
             </table>
         </section>
         
