--- a/extra.html
+++ b/extra.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.12.0</title>
+    <title>Qombo: Data Navigator - v1.12.1</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.12.0</h1>
+        <h1>Qombo: Data Navigator - v1.12.1</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -54,6 +54,9 @@
                 <tr><th>decreaseOnlineAccountsDifficultyTimestamp</th><td>1731958200000</td><td id="date-decrease"></td><td id="until-decrease"></td></tr>
                 <tr><th>removeOnlyMintWithNameHeight = 1935500</th><td id="timestamp-name2"></td><td id="date-name2"></td><td id="until-name2"></td></tr>
                 <tr><th>fixBatchRewardHeight = 1945900</th><td id="timestamp-batchfix"></td><td id="date-batchfix"></td><td id="until-batchfix"></td></tr>
+                <tr><th>adminsReplaceFoundersHeight = 9999999</th><td id="timestamp-replace"></td><td id="date-replace"></td><td id="until-replace"></td></tr>
+                <tr><th>nullGroupMembershipHeight = 9999999</th><td id="timestamp-null"></td><td id="date-null"></td><td id="until-null"></td></tr>
+                <tr><th>ignoreLevelForRewardShareHeight = 9999999</th><td id="timestamp-ignore"></td><td id="date-ignore"></td><td id="until-ignore"></td></tr>
             </table>
         </section>
         
