Add "adminQueryFixHeight" featureTrigger with placeholder height

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                 <tr><th>adminsReplaceFoundersHeight = 9999999</th><td id="timestamp-replace"></td><td id="date-replace"></td><td id="until-replace"></td></tr>
                 <tr><th>nullGroupMembershipHeight = 9999999</th><td id="timestamp-null"></td><td id="date-null"></td><td id="until-null"></td></tr>
                 <tr><th>ignoreLevelForRewardShareHeight = 9999999</th><td id="timestamp-ignore"></td><td id="date-ignore"></td><td id="until-ignore"></td></tr>
+                <tr><th>adminQueryFixHeight = 9999999</th><td id="timestamp-queryfix"></td><td id="date-queryfix"></td><td id="until-queryfix"></td></tr>
             </table>
             <h3>Block Rewards</h3>
             <table>
