--- a/extra.html
+++ b/extra.html
@@ -13,13 +13,13 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-extra"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | Extra</span></p>
+                <p><span id="menu-extras"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | Extras</span></p>
             </div>
         </section>
         
-        <section id="extra-info">
-            <h3>Extra Page - For Development Purposes</h3>
-            <div id="extra-div"></div>
+        <section id="extras-info">
+            <h3>Extras Page - For Development Purposes</h3>
+            <div id="extras-div"></div>
             <table>
                 <tr><th>Current Block</th><td id="block-height"></td><th>Current Timestamp</th><td id="current-timestamp"></td></tr>
                 <tr><th>Blocks/Day</th><td id="blocks-past-day"></td><th>Seconds/Block</th><td id="block-time"></td></tr>
@@ -81,6 +81,6 @@
         </section>
     </main>
 
-    <script src="extra.js"></script>
+    <script src="extras.js"></script>
 </body>
 </html>
