Add "Switch version" button

--- a/assets.html
+++ b/assets.html
@@ -11,6 +11,7 @@
         <h1>Qombo: Data Navigator - v1.12.4</h1>
     </header>
     <main>
+        <button id="version-switch" class="menu-button" onclick="window.location.href='index.html'">&#x21C6;</button>
         <section id="menu-bar">
             <div id="menu-list">
                 <p><span id="menu-assets"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | Assets | <a href="extras.html">Extras</a></span></p>
