--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         <a class="menu-item" id="menu-extras" onclick="showSection('extras', event)">Extras</a>
     </div>
     <main id="main-content">
+        <button id="version-switch" class="menu-button">
+            &#x21C6;
+        </button>
         <section id="home-page" class="content-section">
             <h2>Home</h2>
-            <p>Switch to <a href="home.html">Old</a> Version</p>
             <h3>Details<button id="home-button">Refresh</button></h3>
             <table id="home-details">
                 <tr><th>Block Height</th><th>Block Reward</th><th>Avg Block Time</th><th>Blocks/Day</th><th>Total Supply</th><th>QORT Minted/Day (Estimate)</th></tr>
