--- a/extras.html
+++ b/extras.html
@@ -14,7 +14,7 @@
         <button id="version-switch" class="menu-button" onclick="window.location.href='index.html'">&#x21C6;</button>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-extras"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | Extras</span></p>
+                <p><span id="menu-extras"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="mintership.html">Mintership</a> | Extras</span></p>
             </div>
         </section>
         
