--- a/mintership.html
+++ b/mintership.html
@@ -14,7 +14,7 @@
         <button id="version-switch" class="menu-button" onclick="window.location.href='index.html'">&#x21C6;</button>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-polls"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | Polls | <a href="assets.html">Assets</a> | <a href="mintership.html">Mintership</a> | <a href="extras.html">Extras</a></span></p>
+                <p><span id="menu-mintership"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | Mintership | <a href="extras.html">Extras</a></span></p>
             </div>
         </section>
         
@@ -25,16 +25,16 @@
             </table>
         </section>
 
-        <section id="poll-search">
-            <h2>Poll Information</h2>
-            <div id="poll-details">
+        <section id="mintership-search">
+            <h2>Minter Request Cards - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter search query"></h2>
+            <div id="mintership-details">
             </div>
             <h3>Search Results</h3>
-            <div id="poll-results">
+            <div id="mintership-results">
             </div>
         </section>
     </main>
 
-    <script src="polls.js"></script>
+    <script src="mintership.js"></script>
 </body>
 </html>
