--- a/mintership.html
+++ b/mintership.html
@@ -25,6 +25,19 @@
             </table>
         </section>
 
+        <section id="mintership-admins">
+            <h2>Mintership Admins</h2>
+            <table id="mintership-admins-table">
+                <thead>
+                    <tr>
+                        <th>Admin Name</th>
+                        <th>Admin Address</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+
         <section id="mintership-search">
             <h2>Minter Request Cards - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter search query"></h2>
             <div id="mintership-details">
@@ -38,3 +51,4 @@
     <script src="mintership.js"></script>
 </body>
 </html>
+
