Add expandable header to minter admin list

--- a/mintership.html
+++ b/mintership.html
@@ -26,8 +26,8 @@
         </section>
 
         <section id="mintership-admins">
-            <h2>Mintership Admins</h2>
-            <table id="mintership-admins-table">
+            <h3 class="expandable-header" onclick="toggleSection('mintership-admins-table', renderMintershipAdmins, 'minterAdminsLoaded')">Mintership Admins &#9660;</h3>
+            <table id="mintership-admins-table" style="display: none;">
                 <thead>
                     <tr>
                         <th>Admin Name</th>
